# bubbly-agents

./: .envrc  .gitignore  ISSUES.md  README.md  SECURITY.md  bubbly-agents-bashrc  pyproject.toml
profiles/activate-venv-via-direnv/: .bash_profile  .bashrc  profile.conf
profiles/devtools/: profile.conf
profiles/devtools/dotfiles/: .bashrc
profiles/example/: profile.conf
profiles/example/dotfiles/: .bash_profile  .bashrc
profiles/minimal/: profile.conf
sandbox/: config.py  exec.py  groups.py  ids.py  installs.py  jobctl.py  launcher.py  membership.py  models.py  profiles.py  shells.py  state.py  users.py
sandbox/cli/: exec.py  groups.py  jobctl.py  main.py  membership.py  users.py
sandbox/tests/: test_pure.py
sandbox/tui/: app.py  groups.py  modals.py  profiles.py  users.py
