[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox-ctl"
version = "0.1.0"
description = "Manage bubblewrap-sandboxed Linux user accounts"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "textual>=0.50.0",
]

[project.scripts]
sandbox-ctl = "sandbox.cli.main:cli"
sandbox-tui = "sandbox.tui.app:main"
jobctl = "sandbox.cli.jobctl:jobctl_group"

[tool.setuptools.packages.find]
where = ["."]
include = ["sandbox*"]
